swagger with post working
