# docs/swagger.json
@@ -21,6 +21,26 @@
     "host": "localhost:9093",
     "basePath": "/",
     "paths": {
+        "/bitgoAccounts": {
+            "get": {
+                "description": "Display the wallet accounts.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "root"
+                ],
+                "summary": "Get Bitgo wallet accounts.",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/createalgoaccount": {
             "get": {
                 "description": "get the status of server.",
@@ -83,7 +103,7 @@
         },
         "/postTransaction": {
             "post": {
-                "description": "get the status of server.",
+                "description": "Post transaction.",
                 "consumes": [
                     "application/json"
                 ],
@@ -94,6 +114,17 @@
                     "root"
                 ],
                 "summary": "Show the status of server.",
+                "parameters": [
+                    {
+                        "description": "Add transaction details",
+                        "name": "transaction_details",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
