# main.go
@@ -33,11 +33,13 @@ func main() {
 	rout := gin.Default()
 
 	rout.Use(Logger()) //use of middleware
-	rout.GET("/pagotoken", GetAuthToken)
 
+	rout.GET("/pagotoken", GetAuthToken)
 	rout.GET("/pagoentities", GetListFromPagoEntities)
 	rout.GET("/createalgoaccount", CreateAlgorandAccount)
 	rout.POST("/postTransaction", PostTransaction)
+	rout.GET("/bitgoAccounts", GetBitgoWalletAddress)
+
 	rout.GET("/metrics", gin.WrapH(promhttp.Handler()))
 	rout.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	log.WithFields(log.Fields{
